--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -6,3 +6,20 @@
 :root {
     --swiper-navigation-color: #E49A38;
   }
+  body {
+    width: 100%;
+    height: 100%;
+  }
+  html {
+    width: 100%;
+    height: 100%;
+  }
+  #root {
+    width: 100%;
+    height: 100%;
+  }
+  
+  *{
+    box-sizing: border-box;
+  }
+  
